--- a/src/index.html
+++ b/src/index.html
@@ -13,34 +13,40 @@
         <link rel="stylesheet" href="codemirror/theme/dracula.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">ORDS JS SDK</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="./">Demo <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./doc/">Documentation</a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <textarea id="code" cols="30" rows="10"></textarea>
-                <button type="button" onclick=" run() ">Press</button>
-                <pre id="result"></pre>
-            </div>
-        </nav>
-        <div class="d-flex h-100">
-            <div id="left"></div>
-            <div id="right">
-                <pre id="jsonData"></pre>
+        <div style="width: 50%; float:left">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">ORDS JS SDK</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="./">Demo <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./doc/">Documentation</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <textarea id="code" cols="30" rows="10"></textarea>
+                    <button type="button" onclick=" run() ">Press</button>
+                    <pre id="result"></pre>
+                </div>
+            </nav>
+        </div>
+        <div style="width: 50%; float:right">
+            <div class="d-flex h-100">
+                <div id="left"></div>
+                <div id="right">
+                    <pre id="jsonData"></pre>
+                </div>
             </div>
         </div>
+        
+        
 
         <!--script src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
